# INTERN

gen-ai-platform-backend/: .gitignore  README.md  pyproject.toml
gen-ai-platform-backend/src/gen_ai_platform_backend/: __init__.py  main.py
gen-ai-platform-backend/src/gen_ai_platform_backend/config/: config.py
gen-ai-platform-backend/src/gen_ai_platform_backend/database/: createDB.py  database.py
gen-ai-platform-backend/src/gen_ai_platform_backend/schema/: schema.py
gen-ai-platform-backend/src/gen_ai_platform_backend/services/: firebase.py  post_chat.py
gen-ai-platform-backend/src/gen_ai_platform_backend/utils/: base64.py  save_img.py
gen-ai-platform-frontend/: package.json
gen-ai-platform-frontend/src/: App.css  App.tsx  index.css
gen-ai-platform-frontend/src/api/: index.ts
gen-ai-platform-frontend/src/components/: Header.tsx  PrivateRoute.tsx  UserMenu.tsx
gen-ai-platform-frontend/src/components/Chat/: ChatInput.tsx  ChatLog.tsx
gen-ai-platform-frontend/src/components/Chat/History/: ChatHistory.tsx
gen-ai-platform-frontend/src/components/Login/: Footer.css  Footer.tsx
gen-ai-platform-frontend/src/components/Prompt/: PromptElement.tsx  PromptList.tsx
gen-ai-platform-frontend/src/firebase/: auth.ts  getToken.tsx
gen-ai-platform-frontend/src/pages/: Chat.css  Chat.tsx  Login.css  Login.tsx  MainPage.css  Prompt.css  Prompt.tsx
